# material

Ejemplo ML/: Pipfile  ejemplo.ipynb  modelo.joblib  restaurants.csv
Ejemplo backend/: data.db  main.py  restaurants.csv
Ejemplo dash/: Pipfile  app.py
Ejemplo html/: etiquetas html.html  index.html  negocios.html  tableros.html
Ejemplo html/css/: main.css
Proyecto Final/backend/: README.md  lr_model.joblib  main.py  pyproject.toml  test_file.csv
Proyecto Final/convert-html-dash/: README.md  convert.py  footer.html  index.html  negocios.html  negocios.py  pyproject.toml  tableros.html  tableros.py
Proyecto Final/convert-html-dash/dash/: chat_button.py  chat_window.py  footer.py  index.py  nav.py  predicción.py
Proyecto Final/convert-html-dash/html/: chat_button.html  chat_window.html  nav.html  predicción.html
Proyecto Final/data/: README.md  data.db  fotos.ipynb  fts_tables.sql  restaurants.csv
Proyecto Final/frontend/: README.md  app.py  pyproject.toml
Proyecto Final/frontend/pages/: inicio.py  negocios.py  predicciones.py  tableros.py
Proyecto Final/html/: README.md  index.html  negocios.html  predicción.html  tableros.html
Proyecto Final/ml/: README.md  models.ipynb  preparation.ipynb  pyproject.toml  restaurants_with_metrics.csv  rf_model.joblib  transactions.csv  waiters.csv
